Fix horiz scrollbar on mobile

--- a/index.css
+++ b/index.css
@@ -49,7 +49,11 @@ h1, h2, h3, ul, img {
 }
 
 img, .block {
-    margin: 0 1.236em 1.236em 0;
+    margin: 0 0 1.236em 0;
+}
+
+.margin-right {
+    margin-right: 1.236em;
 }
 
 article, p {
@@ -107,7 +111,7 @@ footer {
     color:#6C7A89;
     position: absolute;
     bottom: 0;
-    width: 75%;
+    width: 50%;
 }
 
 .flex-container {
@@ -148,4 +152,9 @@ footer {
     .flex-container.responsive {
         display: block;
     }
+
+    .margin-right {
+        margin-right: 0em;
+    }
+   
 }
